--- a/GenshinScanner/GenshinScanner.csproj
+++ b/GenshinScanner/GenshinScanner.csproj
@@ -34,6 +34,9 @@
         <WarningLevel>4</WarningLevel>
     </PropertyGroup>
     <ItemGroup>
+        <Reference Include="GenshinScanner, Version=1.0.0.0, Culture=neutral, PublicKeyToken=null">
+          <HintPath>bin\Debug\GenshinScanner.exe</HintPath>
+        </Reference>
         <Reference Include="Newtonsoft.Json, Version=13.0.0.0, Culture=neutral, PublicKeyToken=30ad4fe6b2a6aeed">
           <HintPath>..\packages\Newtonsoft.Json.13.0.1\lib\net45\Newtonsoft.Json.dll</HintPath>
           <Private>True</Private>
@@ -59,12 +62,13 @@
         </Reference>
     </ItemGroup>
     <ItemGroup>
-        <Compile Include="Components\SelectList.cs">
+        <Compile Include="Components\CharacterCard.cs">
           <SubType>UserControl</SubType>
         </Compile>
-        <Compile Include="Components\SelectList.Designer.cs">
-          <DependentUpon>SelectList.cs</DependentUpon>
+        <Compile Include="Components\CharacterCard.Designer.cs">
+          <DependentUpon>CharacterCard.cs</DependentUpon>
         </Compile>
+        <Compile Include="Components\DoubleBufferedPanel.cs" />
         <Compile Include="Data\Artifact.cs" />
         <Compile Include="Data\Character.cs" />
         <Compile Include="Data\GenshinData.cs" />
@@ -84,11 +88,8 @@
         </Compile>
         <Compile Include="Program.cs" />
         <Compile Include="Properties\AssemblyInfo.cs" />
-        <EmbeddedResource Include="Components\SelectList.en.resx">
-          <DependentUpon>SelectList.cs</DependentUpon>
-        </EmbeddedResource>
-        <EmbeddedResource Include="Components\SelectList.resx">
-          <DependentUpon>SelectList.cs</DependentUpon>
+        <EmbeddedResource Include="Components\CharacterCard.resx">
+          <DependentUpon>CharacterCard.cs</DependentUpon>
         </EmbeddedResource>
         <EmbeddedResource Include="Properties\Resources.en.resx">
           <DependentUpon>Resources.resx</DependentUpon>
@@ -130,13 +131,12 @@
         <None Include="App.config" />
     </ItemGroup>
     <ItemGroup>
-      <Content Include="Assets\Icon.ico" />
-      <Content Include="Assets\Icon.png" />
-      <Content Include="Assets\Title_Black.png" />
-      <Content Include="Assets\Title_Blue.png" />
       <Content Include="Resources\Icon.png" />
       <Content Include="Resources\Title_Black.png" />
       <Content Include="Resources\Title_Blue.png" />
+    </ItemGroup>
+    <ItemGroup>
+      <Folder Include="Assets" />
     </ItemGroup>
     <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
     <Import Project="..\packages\Tesseract.4.1.1\build\Tesseract.targets" Condition="Exists('..\packages\Tesseract.4.1.1\build\Tesseract.targets')" />
